--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,200 @@
 @tailwind components;
 @tailwind utilities;
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
-.section{
+.section {
   height: calc(100vh - 80px);
-  
 }
 
+
+
+
+
+
+
+
+/* Category swiper starts */
+.swiper {
+  width: 100%;
+}
+.slide {
+width:40%;
+}
+
+.swiper-container {
+  width: 95%;
+  height: 70vh;
+}
+
+
+
+@media screen and (max-width: 1280px) {
+  .swiper-container {
+    width:100%;
+    height: 60vh;
+  }
+  .slide{
+    width: 35% 
+  }
+}
+
+
+@media screen and (max-width: 1098px) {
+  .swiper-container {
+    /* width: 640; */
+  }
+
+  .slide{
+    width:45% !important;
+  }
+}
+
+
+@media screen and (max-width: 840px) {
+  .swiper-container {
+    /* width: 640; */
+  }
+
+  .slide{
+    width:50% !important;
+  }
+}
+
+
+@media screen and (max-width: 640px) {
+  .swiper-container {
+    /* width: 640; */
+  }
+
+  .slide{
+    width:60% !important;
+  }
+
+ 
+}
+
+@media screen and (max-width: 480px) {
+  .swiper-container {
+    /* width: 640; */
+  }
+
+  .slide{
+    width:80% !important;
+  }
+ 
+}
+@media screen and (max-width: 400px) {
+  .swiper-container {
+    /* width: 640; */
+  }
+
+  .slide{
+    width:85% !important;
+  }
+ 
+}
+/* Category swiper ends */
+
+
+
+
+
+/*Testimonial swiper starts */
+.swiper {
+  width: 100%;
+}
+.slide {
+width:30% !important;
+}
+
+.swiper-container {
+  width: 95%;
+  /* height: 40vh; */
+}
+
+
+.swiper-container.testi{
+  height: 43vh;
+}
+
+
+@media screen and (max-width: 1280px) {
+  .swiper-container {
+    width:100%;
+    height: 60vh;
+  }
+  .slide{
+    width: 35% !important; 
+  }
+}
+
+
+@media screen and (max-width: 1098px) {
+  .swiper-container {
+    /* width: 640; */
+  }
+
+  .slide{
+    width:45% !important;
+  }
+}
+
+
+@media screen and (max-width: 840px) {
+  .swiper-container {
+    /* width: 640; */
+  }
+
+  .slide{
+    width:50% !important;
+  }
+}
+
+
+@media screen and (max-width: 640px) {
+  .swiper-container. {
+    /* width: 640; */
+  }
+
+  .slide{
+    width:60% !important;
+  }
+  .testi .slide{
+    width:80% !important;
+  }
+
+
+ 
+}
+
+@media screen and (max-width: 480px) {
+  .swiper-container {
+    /* width: 640; */
+  }
+
+  .slide{
+    width:80% !important;
+  }
+  .testi .slide{
+    width:90% !important;
+  }
+
+ 
+}
+@media screen and (max-width: 400px) {
+ .swiper-container.testi{
+  height: 40vh;
+}
+
+  .slide{
+    width:85% !important;
+  }
+   .testi .slide{
+    width:90% !important;
+  }
+ 
+}
+/* Category swiper ends */
