--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,25 @@ html {
   box-sizing: border-box;
 }
 
+
+
+/* Hide the controls for the number input */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+
+
+
+
 @media (min-width: 1400px) {
   .heading{
   line-height: 50px !important;
